% Check from R:
%  news(db = tools:::.build_news_db_from_package_NEWS_Rd("~/R/Pkgs/robustbase/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R Package \pkg{robustbase}}
\encoding{UTF-8}

\section{CHANGES in robustbase VERSION 0.99-1 (2023-10-11, svn r983)}{
  % --- 1.0-0  once we fix  adjOutlyingness() properly !
  %     =====
  \subsection{Misc}{
    \itemize{
      \item document the \code{...} argument(s) of \code{nlrob.control()}.
      \item \file{DESCRIPTION}: more URLSs.
      \item \file{*.Rd} tweaks; avoiding other \verb{NOTE}s.
    }
  }
}

\section{CHANGES in robustbase VERSION 0.99-0 (2023-06-12, svn r928)}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item In case it finds an \emph{exact fit}, i.e., \eqn{k > n/2}
      residuals are (practically) zero, \code{lmrob.S()} now returns that,
      \code{scale = 0}, and robustness weights \code{weights(.,	"robustness")}
      which are either 0 or 1 quickly and more consistently.

      This is \emph{not yet} satisfactorily working for the \dQuote{large n} case.

      **** \bold{TODO}: Optionally (but off by default?? for back compatibility??),
      \code{lmrob()} initialized by such an exact-fit estimator may use a
      (user-specified or automatic) scale \eqn{\hat{s} > 0}{s^ > 0} to
      continue providing efficient SM / MM estimates.

      \item \code{lmrob.control()} gets class \code{"lmrobCtrl"} which can be
      \code{print()}ed and \code{update()}d.

      \item New tuning const \code{zero.scale = 1e-10} instead of hardwired
      \code{EPS_ZERO} in \code{lmrob.S()}'s C code; additionally the exact
      fit / zero-residuals checking is finally y-scale equivariant, using
      \eqn{1/n ||y||_1 = } \code{mean(abs(y))}.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Fixed \code{covMcd()}: corrected the consistency correction
      factor for the reweighted estimate: was MCDCons(p, sum(w)/n),
      now is MCDCons(p, 0.975), see Croux and Haesbroeck (1999).
