@@ -1,7 +1,7 @@
 Package: robustbase
 Version: 0.99-1
 VersionNote: Released 0.99-0 on 2023-06-12 to CRAN
-Date: 2023-10-11
+Date: 2023-11-27
 Title: Basic Robust Statistics
 Authors@R: c(person("Martin","Maechler", role=c("aut","cre"), email="maechler@stat.math.ethz.ch", comment = c(ORCID = "0000-0002-8685-9910"))
          , person("Peter", "Rousseeuw", role="ctb", comment = "Qn and Sn")
